<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.RegistrationActivity"
        android:background="@color/text"
        style="@style/AppTheme">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:src="@drawable/registration_logo_shape"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/logo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="200sp"
                    android:layout_height="200sp"
                    android:src="@drawable/ic_application_logo_secondary"
                    android:contentDescription="@string/logo" />

                <com.google.android.material.textview.MaterialTextView
                    android:text="@string/hello_user"
                    android:textSize="35sp"
                    android:textColor="@color/secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/buttons_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_padding"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up"
                android:text="@string/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:layout_marginTop="5sp"
                style="@style/AppButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/log_in"
                android:text="@string/log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:layout_marginTop="5sp"
                style="@style/AppButton" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/google_log_in"
                    android:src="@drawable/ic_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shape_oval"
                    android:padding="10sp"
                    android:contentDescription="@string/google_upper"
                    android:layout_margin="10sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</layout>