<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.first_start.SignInFragment"
        style="@style/AppBottomSheetDialogTheme"
        android:padding="15sp"
        android:animateLayoutChanges="true"
        android:background="@drawable/rounded_dialog">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/sign_in"
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_gravity="center"
            android:layout_width="150sp"
            android:layout_height="2dp"
            android:background="@drawable/line_shape"
            android:layout_marginTop="7.5sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.5sp"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/errorSignIn"
                android:text="error"
                android:textColor="@color/design_default_color_error"
                android:textAlignment="center"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutSignInEmail"
                android:hint="@string/email"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSignInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutSignInPassword"
                android:layout_marginTop="5sp"
                android:hint="@string/password"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSignInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7.5sp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnForgetText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:text="@string/remind_password" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/contentLoadingProgressBar"
                    style="?android:progressBarStyleSmall"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:alpha="0.5" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignInConfirm"
                    style="@style/AppButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/confirm" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>