<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sceneToRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.first_start.SignUpFragment"
        style="@style/AppBottomSheetDialogTheme"
        android:padding="15sp"
        android:animateLayoutChanges="true"
        android:background="@drawable/rounded_dialog">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/sign_up"
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_gravity="center"
            android:layout_width="150sp"
            android:layout_height="2dp"
            android:background="@drawable/line_shape"
            android:layout_marginTop="7.5sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorSignUp"
            android:text="error"
            android:textColor="@color/design_default_color_error"
            android:textAlignment="center"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom" />

        <ViewFlipper
            android:id="@+id/blocksFlipper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inAnimation="@anim/slide_in"
            android:outAnimation="@anim/slide_out">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5sp"
                    android:layout_marginBottom="15sp"
                    android:id="@+id/blockEmails"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/email_block_title"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:layout_gravity="center" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutSignUpEmail"
                        android:layout_marginTop="5sp"
                        android:hint="@string/email"
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputSignUpEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.core.widget.ContentLoadingProgressBar
                        android:id="@+id/progressSignUpEmail"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        style="?android:progressBarStyleSmall"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        android:indeterminate="true"
                        android:alpha="0.25" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUpNext"
                        android:text="@string/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        style="@style/AppButton" />

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/signUpPasswords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/blockPasswords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.5sp"
                    android:layout_marginBottom="15sp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutSignUpPassword1"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputSignUpPassword1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutSignUpPassword2"
                        android:hint="@string/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:errorEnabled="true"
                        android:layout_marginTop="15sp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputSignUpPassword2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUpBack"
                        android:text="@string/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        style="@style/AppButton" />

                    <androidx.core.widget.ContentLoadingProgressBar
                        android:id="@+id/progressSignUpPassword"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        style="?android:progressBarStyleSmall"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        android:alpha="0.25" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUpConfirm"
                        android:text="@string/confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        style="@style/AppButton" />

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ViewFlipper>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>