<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

         <variable
             name="error"
             type="String" />

        <variable
            name="error_solution"
            type="String" />

        <variable
            name="authVM"
            type="ru.sulgik.remotearduino.auth.AuthVM" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppBottomSheetDialogTheme">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogCard">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10sp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{error}"
                        android:visibility="@{error != null ? View.VISIBLE : View.GONE}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{error_solution}"
                        android:visibility="@{error_solution != null ? View.VISIBLE : View.GONE}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/log_in"
                        android:textSize="35sp"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="@dimen/standard_padding"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/dismiss_button"
                        android:layout_marginTop="@dimen/standard_padding"
                        android:layout_marginEnd="@dimen/standard_padding"
                        android:layout_marginStart="@dimen/standard_padding"
                        android:layout_marginBottom="@dimen/standard_padding"
                        android:src="@drawable/line_shape"
                        android:layout_width="@dimen/line_width"
                        android:layout_height="3dp"
                        android:layout_gravity="center"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_layout"
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="@dimen/standard_padding"
                        android:layout_marginStart="@dimen/standard_padding"
                        android:layout_marginEnd="@dimen/standard_padding">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@color/primaryText"
                            android:id="@+id/email"
                            android:text="@={authVM.email}"
                            android:hint="@string/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:inputType="textEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="@dimen/standard_padding"
                        android:layout_marginStart="@dimen/standard_padding"
                        android:layout_marginEnd="@dimen/standard_padding"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@color/primaryText"
                            android:id="@+id/password"
                            android:text="@={authVM.password1}"
                            android:hint="@string/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/confirm_button"
                        android:text="@string/confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/AppButton"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/remind_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/remind_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:layout_gravity="center"
                        android:lines="1"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>